Make --explicitly-allowed-ports work with NetworkService.

This also makes it work in content_shell, whereas previously it was only wired up in chrome.

Bug: 916025
Change-Id: Ic79e478d02160e2cb0727a22495c029f21447796
Reviewed-on: https://chromium-review.googlesource.com/c/1400042
Commit-Queue: Eric Roman <eroman@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620910}